# Nexara

./: .agent  .gitignore  .idea  .vscode  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app.json  babel.config.js  build-release.ps1  build-release.sh  build_output.txt  cache_debug_plan.txt  crash_report.txt  debug-markdown.js  design_system.md  dev-proxy.sh  fetch_stitch_specs.py  force_sign.ps1  force_sign_hard.ps1  global.css  jest.config.js  logcat  metro.config.js  nexara_logs(1).txt  nexara_logs(2).txt  nexara_logs(3).txt  nexara_logs.txt  package-lock.json  package.json  tailwind.config.js  temp_glass_header.tsx  test-deepseek-fmt.js  test-deepseek-fmt.ts  test-markdown-fix.js  tsconfig.json  update_gradle.ps1  verify-sanitizer.ts  文件系统架构技术分析报告.md
.agent/: PROJECT_RULES.md  README.md  TODO.md  commit-msg.txt  handover.md  registry.md  todo.md
.stitch/: HANDOVER_PHASE3.md  fetch_commands.txt  screens_index.md
android/: build.gradle  gradle.properties  settings.gradle
app/: _layout.tsx  index.tsx  knowledge-graph.tsx  visual-demo.tsx  webview-renderer-demo.tsx  welcome.tsx
docs/: ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  DEVELOPMENT_INDEX.md  DOCUMENT_GOVERNANCE.md  IMPLEMENTATION_ANALYSIS.md  MARKDOWN_RENDERING_AUDIT.md  PRD.md  PROJECT_MEMORY.md  UNIFIED_SKILLS_AND_SMART_RAG_PLAN.md  artifacts-optimization-plan.md  audit-report-final.md  industry-comparison-report.md  project_memory.md  testing_plan.md
native-ui/: .gitignore  AGENTS.md  build.gradle.kts  build_log.txt  gradle.properties  gradlew.bat  settings.gradle.kts
native-ui/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
patches/: react-native-reanimated+4.1.6.patch
plans/: artifacts-workspace-implementation.md  artifacts-workspace-integration-plan.md
plugins/: withAndroidDebugConfig.js  withAndroidSigning.js  withArm64Only.js  withCustomApkName.js  withForegroundService.js  withNativeLibraryTags.js  withWideColorGamut.js
screenshots/: Nexara_Log_2026-04-20T12-03-23-454Z.txt
scripts/: append_r8_fix.js  append_signing_and_r8.js  audit-graph-store.ts  build-web-renderer.sh  bump-version.js  diagnose_gradle.js  disable_lint.js  disable_r8.js  fix-usbip-driver.sh  fix_apk_name.js  fix_debug_suffix.js  fix_release_robust.js  fix_release_safe.js  fix_signing.js  jest-teardown.js  nexara-metro-tui.js  setup-usbip-persistence.sh  test-llm.ts  (+4 more)
(+1362 files in other folders)
